--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.MainActivity" />
-        <activity android:name=".popup.SaveMemberPopup"
+        <activity
+            android:name=".popup.SaveMemberPopup"
+            android:theme="@android:style/Theme.DeviceDefault.Light.Dialog" />
+        <activity android:name=".popup.SaveMemoPopup"
             android:theme="@android:style/Theme.DeviceDefault.Light.Dialog" />
     </application>
 
