--- a/app/src/main/res/raw/db.properties
+++ b/app/src/main/res/raw/db.properties
@@ -17,4 +17,5 @@ db.insMemo=insert into memo (subject, comment) values('%s', '%s');
 # update Query
 
 # delete Query
+db.delMemo=delete from memo where id=%s;
 
