--- a/app/src/main/res/raw/db.properties
+++ b/app/src/main/res/raw/db.properties
@@ -1,21 +1,21 @@
 # version
 db.name=beautynote.db
-db.version=2
+db.version=1
 
 # onCreate Query
-db.createMemo=create table memo(id integer primary key autoincrement, subject text, comment text);
+db.createMemo=CREATE TABLE MEMO(ID INTEGER PRIMARY KEY AUTOINCREMENT, SUBJECT TEXT, COMMENT TEXT);
 
 # onUpgrade Query
-db.dropMemo=drop table memo;
+db.dropMemo=DROP TABLE MEMO;
 
 # select Query
-db.selMemo=select id, subject, comment from memo;
+db.selMemo=SELECT ID, SUBJECT, COMMENT FROM MEMO;
 
 # insert Query
-db.insMemo=insert into memo (subject, comment) values('%s', '%s');
+db.insMemo=INSERT INTO MEMO (SUBJECT, COMMENT) VALUES('%s', '%s');
 
 # update Query
 
 # delete Query
-db.delMemo=delete from memo where id=%s;
+db.delMemo=DELETE FROM MEMO WHERE ID=%S;
 
