--- a/app/src/main/res/raw/config.properties
+++ b/app/src/main/res/raw/config.properties
@@ -1,9 +1,4 @@
-# ¾Û ¹öÀüÁ¤º¸
-config.Version=1.0.0
-
-# ¼­¹ö Á¤º¸
-config.Host=ivdev.iptime.org
-config.Port=8888
-
-# ÆÄÀÏ ÀúÀåÁ¤º¸
-#config.photo=/sdcard/BeautyNote/Photo/
+# ì„œë²„ì •ë³´
+config.Host=http://soonhyung89.iptime.org
+config.Port=8080
+config.Directory=BeautyNote
